--- a/styles/global.css
+++ b/styles/global.css
@@ -48,10 +48,14 @@ body {
     min-height: 100vh;
     /* ensures that the footer does not overlap with the main content of each page */
     width: 100vw;
-    max-width: 140rem;
-    margin: 0 auto;
     padding: 0 0 5% 0;
     overflow-x: hidden;
+}
+
+.body-contain {
+        width: 100%;
+            max-width: 140rem;
+            margin: 0 auto;
 }
 
 
