--- a/styles/index_events.css
+++ b/styles/index_events.css
@@ -9,6 +9,7 @@
 #rec-events-sec {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 8%;
     margin: 0 auto;
     width: 100%;
@@ -25,9 +26,10 @@
 
 .rec-events-cont1 h2 {
     text-align: center;
-    margin: 0;
+    margin: 0 0 0.5rem 0;
     color: var(--dark-brown);
-    font-size: 2.7rem
+    font-size: 2.7rem;
+    text-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 #search-input-pub,
@@ -49,7 +51,7 @@
     border-top: 2rem solid var(--light-brown);
     border-bottom: 2rem solid var(--light-brown);
     /*border-radius: 2%;*/
-    -webkit-box-shadow: 4px 4px 6px 0px #000000;
+    -webkit-box-shadow: 10px 10px 25px 0px #000000;
     box-shadow: 10px 10px 25px 0px #000000;
     color: var(--dark-brown);
 }
